# functions

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
include/ak/: call_on_expire.hpp  call_once_silent.hpp  call_once_strict.hpp  callable_type_traits.hpp  callback_guardian.hpp  not_empty_function.hpp  requires.hpp  shared_function.hpp
test/: call_on_expire.cpp  call_once_silent.cpp  callback_guardian.cpp  not_empty_function.cpp  shared_function.cpp  test.cpp  test.hpp
